fix: Fix error page on small screens

--- a/src/web/pages/resources/common.css
+++ b/src/web/pages/resources/common.css
@@ -341,6 +341,10 @@ ul.bullet-separated {
         margin-top: 0;
     }
 
+    .error-body {
+        width: 100%;
+    }
+
     .mobile-hidden {
         display: none;
     }
